--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <div class="container">
         <h1>🎲 Tombola</h1>
         <div class="mode-buttons">
+            <a href="/nfc" class="mode-btn">
+                👨‍💼 NFC
+            </a>
             <a href="/admin" class="mode-btn">
                 👨‍💼 Amministratore
             </a>
